--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,5 +14,7 @@
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
   </p>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <div text-center padding>
+    <button  ion-button round  small  color="primary" (click)="find()">Crear Partido</button>
+  </div>
 </ion-content>
