model team user macth created

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -43,7 +43,7 @@
   <ion-buttons end *ngIf="userProfile">
     <button ion-button clear (click)="signOut()">LogOut</button>
   </ion-buttons>
-<!--
+
     <ion-list>
       <ion-list-header *ngIf="true">
         Lista de Usuarios
@@ -62,5 +62,5 @@
           </ion-row>
         </ion-grid>
       </ion-item>
-    </ion-list>-->
+    </ion-list>
 </ion-content>
