--- a/src/pages/teams/teams.html
+++ b/src/pages/teams/teams.html
@@ -28,5 +28,9 @@
 
 
 <ion-content padding>
-
+  <ion-fab class="addButtonfab">
+    <button ion-fab mini class="addButton" round icon-only (click)="createTeam()">
+      <ion-icon color="primary" name="md-add"></ion-icon>
+    </button>
+  </ion-fab>
 </ion-content>
