--- a/src/pages/fields/fields.html
+++ b/src/pages/fields/fields.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the FieldsPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar color="light">
@@ -27,5 +22,97 @@
 
 
 <ion-content padding>
+  <ion-card>
 
+    <img src="assets/imgs/cancha1.jpg">
+    <ion-fab right top>
+      <button ion-fab>
+        <ion-icon name="pin"></ion-icon>
+      </button>
+    </ion-fab>
+  
+    <ion-item>
+      <ion-icon name="football" item-start large></ion-icon>
+      <h2>Cancha N°1</h2>
+      <p>calle 1, avenida 1, Cod 1</p>
+    </ion-item>
+  
+    <!-- <ion-item>
+      <ion-icon name="wine" item-start large ></ion-icon>
+      <h2>Institute of Fine Cocktails</h2>
+      <p>14 S. Hop Avenue, Madison, WI 53703</p>
+    </ion-item> -->
+  
+    <ion-item>
+      <!-- <span item-start>18 min</span>
+      <span item-start>(2.6 mi)</span> -->
+      <button ion-button icon-start clear item-center (click)="goToCalendar()">
+        <ion-icon name="navigate"></ion-icon>
+        Reservar Partido
+      </button>
+    </ion-item>
+  
+  </ion-card>
+  <ion-card>
+
+    <img src="assets/imgs/cancha2.jpg">
+    <ion-fab right top>
+      <button ion-fab>
+        <ion-icon name="pin"></ion-icon>
+      </button>
+    </ion-fab>
+  
+    <ion-item>
+      <ion-icon name="football" item-start large></ion-icon>
+      <h2>Cancha N°2</h2>
+      <p>calle 2, avenida 1, Cod2</p>
+    </ion-item>
+  
+    <!-- <ion-item>
+      <ion-icon name="wine" item-start large ></ion-icon>
+      <h2>Institute of Fine Cocktails</h2>
+      <p>14 S. Hop Avenue, Madison, WI 53703</p>
+    </ion-item> -->
+  
+    <ion-item>
+      <!-- <span item-start>18 min</span>
+      <span item-start>(2.6 mi)</span> -->
+      <button ion-button icon-start clear item-center (click)="goToCalendar()">
+        <ion-icon name="navigate"></ion-icon>
+        Reservar Partido
+      </button>
+    </ion-item>
+  
+  </ion-card>
+  <ion-card>
+
+    <img src="assets/imgs/cancha3.jpg">
+    <ion-fab right top>
+      <button ion-fab>
+        <ion-icon name="pin"></ion-icon>
+      </button>
+    </ion-fab>
+  
+    <ion-item>
+      <ion-icon name="football" item-start large></ion-icon>
+      <h2>Cancha N°3</h2>
+      <p>calle 3, avenida 3, Cod 3</p>
+    </ion-item>
+  
+    <!-- <ion-item>
+      <ion-icon name="wine" item-start large ></ion-icon>
+      <h2>Institute of Fine Cocktails</h2>
+      <p>14 S. Hop Avenue, Madison, WI 53703</p>
+    </ion-item> -->
+  
+    <ion-item>
+      <!-- <span item-start>18 min</span>
+      <span item-start>(2.6 mi)</span> -->
+      <button ion-button icon-start clear item-center (click)="goToCalendar()">
+        <ion-icon name="navigate"></ion-icon>
+        Reservar Partido
+      </button>
+    </ion-item>
+  
+  </ion-card>
 </ion-content>
