--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -86,7 +86,7 @@
         <ion-grid>
           <ion-row>
             <ion-col col-2>
-              <img src="{{user.photoURL}}" alt="{{user.name}}" title="{{user.name}}" />
+              <img src="{{user.photoURL}}"/>
             </ion-col>
             <ion-col col-10>
               <div>
