--- a/src/pages/calendar-match/calendar-match.html
+++ b/src/pages/calendar-match/calendar-match.html
@@ -25,12 +25,12 @@
   <div class="calendar-body">
     <ion-grid>
       <ion-row class="calendar-weekday">
-        <ion-col>Su</ion-col>
-        <ion-col>Mo</ion-col>
-        <ion-col>Tu</ion-col>
-        <ion-col>We</ion-col>
-        <ion-col>Th</ion-col>
-        <ion-col>Fr</ion-col>
+        <ion-col>Do</ion-col>
+        <ion-col>Lu</ion-col>
+        <ion-col>Ma</ion-col>
+        <ion-col>Mi</ion-col>
+        <ion-col>Ju</ion-col>
+        <ion-col>Vi</ion-col>
         <ion-col>Sa</ion-col>
       </ion-row>
       <ion-row class="calendar-date">
