--- a/src/pages/fields/fields.html
+++ b/src/pages/fields/fields.html
@@ -1,7 +1,7 @@
 
 <ion-header>
 
-  <ion-navbar color="light">
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -46,7 +46,7 @@
     <ion-item>
       <!-- <span item-start>18 min</span>
       <span item-start>(2.6 mi)</span> -->
-      <button ion-button icon-start clear item-center (click)="goToCalendar()">
+      <button ion-button icon-start clear item-center (click)="goToCalendar(1)">
         <ion-icon name="navigate"></ion-icon>
         Reservar Partido
       </button>
@@ -77,7 +77,7 @@
     <ion-item>
       <!-- <span item-start>18 min</span>
       <span item-start>(2.6 mi)</span> -->
-      <button ion-button icon-start clear item-center (click)="goToCalendar()">
+      <button ion-button icon-start clear item-center (click)="goToCalendar(2)">
         <ion-icon name="navigate"></ion-icon>
         Reservar Partido
       </button>
@@ -108,7 +108,7 @@
     <ion-item>
       <!-- <span item-start>18 min</span>
       <span item-start>(2.6 mi)</span> -->
-      <button ion-button icon-start clear item-center (click)="goToCalendar()">
+      <button ion-button icon-start clear item-center (click)="goToCalendar(3)">
         <ion-icon name="navigate"></ion-icon>
         Reservar Partido
       </button>
