--- a/src/pages/teams/teams.html
+++ b/src/pages/teams/teams.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar color="light">
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -61,7 +61,7 @@
         </ion-item>
       </ion-list>
 
-  <ion-fab class="addButtonfab">
+  <ion-fab class="addButtonfab" right bottom>
     <button ion-fab mini class="addButton" round icon-only (click)="createTeam()">
       <ion-icon color="primary" name="md-add"></ion-icon>
     </button>
