--- a/src/pages/players/players.html
+++ b/src/pages/players/players.html
@@ -1,17 +1,45 @@
-<ion-header>
-  <ion-navbar color="primary">
-    <!-- <ion-buttons left>
-      <button ion-button clear color="dark" icon-only navPop>
-        <ion-icon name="arrow-back"></ion-icon>
+<ion-header *ngIf="!ifSelect()">
+
+    <ion-navbar color="primary">
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
       </button>
-    </ion-buttons> -->
-    <ion-title>Jugadores disponible</ion-title>
-  </ion-navbar>
-</ion-header>
+      <ion-title>Jugadores Disponibles</ion-title>
+      <ion-buttons end>
+        <button 
+              ion-button 
+              clear
+              class="search" 
+              color="dark" 
+              icon-only 
+              (click)="onSearch()">
+          <ion-icon name="search"></ion-icon>
+        </button>
+      </ion-buttons>
+    </ion-navbar>
+  
+  </ion-header>
+  <ion-header *ngIf="ifSelect()">
+    <ion-navbar color="darkColor">
+        <ion-buttons left>
+            <button ion-button clear color="dark" icon-only navPop>
+              <ion-icon name="arrow-back"></ion-icon>
+            </button>
+          </ion-buttons>
+      <ion-searchbar 
+      class="searchbarcus" 
+      [animated]="true" 
+      [(ngModel)]="searchTerm" 
+      [showCancelButton]="true"
+      (ionCancel)="onCancel($event)"
+      (ionInput)="searchPlayers()"></ion-searchbar>
+    </ion-navbar>
+  </ion-header>
+
 
 <ion-content padding>
   <ion-list>
-    <ion-item *ngFor="let player of teamPlayers | async; let i=index" (click)="addPlayer(player)"> 
+    <ion-item *ngFor="let player of listaUser; let i=index" (click)="addPlayer(player)"> 
       <ion-grid>
         <ion-row>
           <ion-col col-2>
