--- a/src/pages/teams/teams.html
+++ b/src/pages/teams/teams.html
@@ -1,30 +1,35 @@
-<!--
-  Generated template for the TeamsPage page.
+<ion-header *ngIf="!ifSelect()">
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar color="primary">
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Equipos</ion-title>
-    <ion-buttons end>
-      <button 
-            ion-button 
-            clear
-            class="search" 
-            color="dark" 
-            icon-only 
-            (click)="onSearch()">
-        <ion-icon name="search"></ion-icon>
+    <ion-navbar color="primary">
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
       </button>
-    </ion-buttons>
-  </ion-navbar>
-
-</ion-header>
+      <ion-title>Equipos</ion-title>
+      <ion-buttons end>
+        <button 
+              ion-button 
+              clear
+              class="search" 
+              color="dark" 
+              icon-only 
+              (click)="onSearch()">
+          <ion-icon name="search"></ion-icon>
+        </button>
+      </ion-buttons>
+    </ion-navbar>
+  
+  </ion-header>
+  <ion-header *ngIf="ifSelect()">
+    <ion-navbar color="darkColor">
+      <ion-searchbar 
+      class="searchbarcus" 
+      [animated]="true" 
+      [(ngModel)]="searchTerm" 
+      [showCancelButton]="true"
+      (ionCancel)="onCancel($event)"
+      (ionInput)="searchTeams()"></ion-searchbar>
+    </ion-navbar>
+  </ion-header>
 
 
 <ion-content padding>
@@ -33,7 +38,7 @@
         <ion-list-header *ngIf="true" text-center>
           Lista de Equipos
         </ion-list-header>
-        <ion-item *ngFor="let team of teamService.listTeams | async; let i=index">
+        <ion-item *ngFor="let team of listaTeam; let i=index">
           <ion-grid (click)="goToDetail(team)">
             <ion-row>
               <!-- <ion-col col-2>
@@ -63,7 +68,7 @@
 
   <ion-fab class="addButtonfab" right bottom>
     <button ion-fab mini class="addButton" round icon-only (click)="createTeam()">
-      <ion-icon color="primary" name="md-add"></ion-icon>
+      <ion-icon color="light" name="md-add"></ion-icon>
     </button>
   </ion-fab>
 </ion-content>
