--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,18 +3,18 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Inicio</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <ion-note>Aplicación Hibrida hecha en Ionic 3 y Angular 5</ion-note>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <h5>
+   Apliacion para Reservas de Partidos
+  </h5>
 
   <div text-center padding>
-    <button  ion-button round  small  color="primary" (click)="find()">Crear Partido</button>
+    <button  ion-button round  small  color="primary" (click)="find()">Ver Reservas</button>
   </div>
 </ion-content>
