--- a/src/pages/teams/teams.html
+++ b/src/pages/teams/teams.html
@@ -40,28 +40,30 @@
         </ion-list-header>
         <ion-item *ngFor="let team of listaTeam; let i=index">
           <ion-grid (click)="goToDetail(team)">
-            <ion-row>
-              <!-- <ion-col col-2>
-                <div *ngIf="!product.thumbnailImageUrl">
-                  <img src="assets/imgs/noPhoto.png" />
-                </div>
-                <div *ngIf="product.thumbnailImageUrl">
-                    <img src="{{product.thumbnailImageUrl}}" />
-                </div>
-              </ion-col> -->
-              <ion-col col-auto>
-                <div>
-                  <h2 class="product-name"> {{team.name}} </h2>
-                  <h3 class="product-name"><ion-note>Capacidad: </ion-note> {{team.sizeTeam}} </h3>
-                </div>
-              </ion-col>
-            
-              <!-- <ion-col col-2>
-                <button  (click)="addRegistry(product)">
-                  <ion-icon color="dark" name="md-add"></ion-icon>
-                </button>
-              </ion-col> -->
-            </ion-row>
+              <ion-row>
+                  <ion-col col-auto>
+                    <div>
+                      <h2 class="product-name"> {{team.name}} </h2>
+                      <h3 class="product-name">
+                        <ion-note>Capacidad: </ion-note> {{team.sizeTeam}}
+                      </h3>
+                    </div>
+                  </ion-col>
+                  <ion-col col-auto class="disp">
+                    <div *ngIf="available(team)==team.sizeTeam">
+                      <h3 class="product-name">Disponibilidad </h3>
+                      <h3 class="product-name" >
+                        <ion-note color="danger"><ion-icon class="people" name="people"></ion-icon>  {{available(team)}} / {{team.sizeTeam}}</ion-note> 
+                      </h3>
+                    </div>
+                    <div *ngIf="available(team)!=team.sizeTeam">
+                        <h3 class="product-name">Disponibilidad </h3>
+                        <h3 class="product-name" >
+                          <ion-note color="primary"><ion-icon class="people" name="people"></ion-icon>  {{available(team)}} / {{team.sizeTeam}}</ion-note> 
+                        </h3>
+                      </div>
+                  </ion-col>
+                </ion-row>
           </ion-grid>
         </ion-item>
       </ion-list>
